added primary page structure

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Page Title</title>
+    <title>Crafting Buddies</title>
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="buddy_style.css">
 </head>
 <body>
     <div class="container">
@@ -26,7 +26,31 @@
             </div>
         </div>
 
-       
+        <div class="about-wrapper">
+            <div class="about">
+                <h3>Engineering for Littles</h3>
+                <p>About about about about</p>
+                <h3>Multi-Materials</h3>
+                <p>Using common materials in interesting ways.</p>
+                <h3>Monthly Design Challenges</h3>
+                <p>Functional artists push themselves create the strongest, lightest, fastest, and coolest designs that follow a few simple constraints.</p>
+            </div>
+
+        <div class="slideshow">
+            <--slideshow here-->
+        </div>
+
+        <-- button for sign up -->
+
+        <div class="current-challenge">
+            <h3>December Design Challenge</h3>
+            <h3>Deadline: December 25, 2022</h3>
+            <br> <h1>Sweetest Strongest Bridge</h1>
+            <-- button for Rules -->
+            <-- butoon for Design Submission -->
+        </div>
+
+       </div>
 
     </div>
 
