trying to add the logo file from the client end of the repo

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
             <div class="right-side">
                 <div class="brand">
-                    <div>Crafting Buddies</div>
+                    <img src="images/Crafting_Buddies_logo.png" alt="Crafting Buddies logo">
                 </div>              
             </div>
         </div>
@@ -37,17 +37,17 @@
             </div>
 
         <div class="slideshow">
-            <--slideshow here-->
+            <!--slideshow here-->
         </div>
 
-        <-- button for sign up -->
+        <!-- button for sign up -->
 
         <div class="current-challenge">
             <h3>December Design Challenge</h3>
             <h3>Deadline: December 25, 2022</h3>
             <br> <h1>Sweetest Strongest Bridge</h1>
-            <-- button for Rules -->
-            <-- butoon for Design Submission -->
+            <!-- button for Rules -->
+            <!-- butoon for Design Submission -->
         </div>
 
        </div>
