--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
                 </div>
 
                 <div class="nav-link-wrapper active-nav-link">
-                    <a href="About.html">About</a>
+                    <a href="about.html">About</a>
                 </div>
             </div>
 
@@ -29,7 +29,7 @@
         <div class="content-wrapper">
             <div class="two-column-wrapper">
                 <div class="profile-img-wrapper">
-                    <img src="Eva Profile.jpg">
+                    <img src="images/Eva Profile.jpg" alt="Eva the Great!">
                 </div>
                 <div class="profile-content-wrapper">
                     <h1>Here is a little about me.</h1>
