--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 </div>
 
                 <div class="nav-link-wrapper">
-                    <a href="About.html">About</a>
+                    <a href="about.html">About</a>
                 </div>              
             </div>
 
