still messing with the profile pic

--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
         <div class="content-wrapper">
             <div class="two-column-wrapper">
                 <div class="profile-img-wrapper">
-                    <img src="images/Eva Profile.jpg" alt="Eva the Great!">
+                    <img src="images/Eva_Profile.jpg" alt="Eva the Great!">
                 </div>
                 <div class="profile-content-wrapper">
                     <h1>Here is a little about me.</h1>
